# qlang

./: .gitignore  Cargo.toml  README.md
crates/ql-analysis/: Cargo.toml
crates/ql-analysis/src/: lib.rs  query.rs  runtime.rs  tests.rs
crates/ql-analysis/tests/: package_completion.rs  package_import_local_roots.rs  package_queries.rs  package_rename.rs  package_symbols.rs  queries.rs
crates/ql-analysis/tests/support/: mod.rs
crates/ql-ast/: Cargo.toml
crates/ql-borrowck/: Cargo.toml
crates/ql-cli/: Cargo.toml
crates/ql-cli/src/: dependency_generic_bridge.rs  main.rs  project_dependencies.rs  project_dependency_edit.rs  project_graph.rs  project_init.rs  project_lock.rs  project_members.rs  project_status.rs  project_targets.rs  project_workspace.rs  tests.rs
crates/ql-cli/src/dependency_generic_bridge/: instantiations.rs
crates/ql-cli/src/project_init/: templates.rs
crates/ql-cli/tests/: codegen.rs  executable_examples.rs  ffi.rs  ffi_header.rs  project_build.rs  project_check.rs  project_dependencies.rs  project_dependents.rs  project_graph.rs  project_init.rs  project_interface.rs  project_lock.rs  project_run.rs  project_status.rs  project_targets.rs  project_test.rs  string_codegen.rs  string_compare_codegen.rs  ui.rs
crates/ql-cli/tests/support/: mod.rs
crates/ql-codegen-llvm/: Cargo.toml
crates/ql-codegen-llvm/src/: error.rs  lib.rs
crates/ql-codegen-llvm/src/tests/: async_lowering.rs  async_main_await.rs  async_main_reinit.rs  async_main_smoke.rs  async_main_spawn.rs  async_main_tail.rs  basics.rs  callable_values.rs  cleanup.rs  match_lowering.rs  mod.rs
crates/ql-diagnostics/: Cargo.toml
crates/ql-driver/: Cargo.toml
crates/ql-driver/src/: build.rs  ffi.rs  lib.rs  toolchain.rs
crates/ql-driver/src/ffi/: tests.rs
crates/ql-driver/src/toolchain/: tests.rs
crates/ql-fmt/: Cargo.toml
crates/ql-hir/: Cargo.toml
crates/ql-lexer/: Cargo.toml
crates/ql-lsp/: Cargo.toml
crates/ql-lsp/src/: backend.rs  bridge.rs  editor_features.rs  lib.rs  main.rs  store.rs
crates/ql-lsp/src/backend/: tests.rs
crates/ql-lsp/src/backend/tests/: basic.rs  implementation.rs
crates/ql-lsp/tests/: block_tail_alias_bindings.rs  block_tail_alias_completion.rs  block_tail_alias_member_queries.rs  block_tail_alias_member_type_definition.rs  block_tail_alias_value_root_queries.rs  block_tail_alias_value_root_type_definition.rs  block_tail_bindings.rs  block_tail_completion.rs  block_tail_member_queries.rs  block_tail_member_type_definition.rs  block_tail_value_root_queries.rs  block_tail_value_root_type_definition.rs  bridge.rs  call_hierarchy_request.rs  code_action_request.rs  code_lens_request.rs  completion_documentation.rs  dependency_function_return_bindings.rs  dependency_global_value_bindings.rs  dependency_grouped_question_value_bindings.rs  dependency_import_local_roots.rs  dependency_import_rename.rs  dependency_root_bindings.rs  dependency_root_completion.rs  dependency_root_member_queries.rs  dependency_root_member_type_definition.rs  dependency_root_queries.rs  dependency_root_type_definition.rs  dependency_signature_help_request.rs  destructured_dependency_bindings.rs  destructured_local_bindings.rs  destructured_local_completion.rs  destructured_local_member_queries.rs  destructured_local_member_type_definition.rs  destructured_local_value_root_queries.rs  destructured_local_value_root_type_definition.rs  diagnostics_lifecycle_request.rs  direct_chain_bindings.rs  direct_indexed_iterable_member_type_definition.rs  direct_indexed_iterable_method_member_type_definition.rs  (+376 more)
crates/ql-lsp/tests/common/: completion.rs  mod.rs  request.rs  stdlib_compat.rs  stdlib_real.rs
crates/ql-lsp/tests/stdlib_real_requests/: code_action.rs  code_lens.rs  completion.rs  document_link.rs  hierarchy.rs  implementation.rs  rename.rs  rich.rs  structure.rs  support.rs
crates/ql-mir/: Cargo.toml
crates/ql-parser/: Cargo.toml
crates/ql-project/: Cargo.toml
crates/ql-resolve/: Cargo.toml
crates/ql-runtime/: Cargo.toml
crates/ql-span/: Cargo.toml
crates/ql-typeck/: Cargo.toml
crates/ql-typeck/src/: checker.rs  duplicates.rs  lib.rs  types.rs  typing.rs
crates/ql-typeck/tests/: async_typing.rs  duplicates.rs  rendering.rs  typing.rs
crates/ql-typeck/tests/support/: mod.rs
docs/: index.md  package-lock.json  package.json  vision.md
docs/.vitepress/: config.mts
docs/architecture/: compiler-pipeline.md  implementation-algorithms.md  repository-structure.md  toolchain.md
docs/design/: concurrency.md  influences.md  interop.md  principles.md  runtime-memory.md  syntax.md  type-system.md
docs/getting-started/: compiler-primer.md  install.md  vscode-extension.md
docs/plans/: 2026-03-26-phase3-closure-escape-facts.md  2026-03-26-phase3-explicit-closure-captures.md  2026-03-26-phase3-ownership-facts.md  2026-03-26-phase4-backend-foundation.md  2026-03-26-phase4-extern-c-direct-calls.md  2026-03-26-phase4-static-library-emission.md  2026-03-26-phase5-build-sidecar-c-header.md  2026-03-26-phase5-c-header-generation.md  2026-03-26-phase5-dynamic-library-emission.md  2026-03-26-phase5-extern-c-definition-exports.md  2026-03-26-phase5-ffi-integration-harness.md  2026-03-26-phase5-import-surface-header-projection.md  2026-03-26-phase5-shared-library-ffi-harness.md  2026-03-26-phase6-explicit-field-label-query-precision.md  2026-03-26-phase6-field-rename-shorthand-expansion.md  2026-03-26-phase6-member-query-precision.md  2026-03-26-phase6-same-file-rename-scaffolding.md  2026-03-28-phase-7-next-priorities.md  2026-03-29-phase-7-p7.2-runtime-and-interop.md  2026-03-30-phase-7-p7.4-next-execution.md  2026-04-05-phase8-interface-artifacts-and-cross-file-lsp.md  2026-05-01-lsp-typescript-parity-roadmap.md  2026-05-02-stdlib-generics-and-collections-roadmap.md  index.md  phase-0-design-freeze.md  phase-2-semantic-and-typing.md  phase-3-mir-and-ownership.md  phase-4-backend-and-artifacts.md  phase-5-ffi-and-c-abi.md  phase-6-lsp-and-editor-experience.md  phase-7-concurrency-and-rust-interop.md
stdlib/: README.md  qlang.toml
(+1054 files in other folders)
