[workspace]
members = [
    "crates/ql-span",
    "crates/ql-ast",
    "crates/ql-lexer",
    "crates/ql-parser",
    "crates/ql-fmt",
    "crates/ql-diagnostics",
    "crates/ql-analysis",
    "crates/ql-hir",
    "crates/ql-resolve",
    "crates/ql-typeck",
    "crates/ql-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["OpenAI Codex"]
license = "MIT"
repository = ""

[workspace.dependencies]
ql-span = { path = "crates/ql-span" }
ql-ast = { path = "crates/ql-ast" }
ql-lexer = { path = "crates/ql-lexer" }
ql-parser = { path = "crates/ql-parser" }
ql-fmt = { path = "crates/ql-fmt" }
ql-diagnostics = { path = "crates/ql-diagnostics" }
ql-analysis = { path = "crates/ql-analysis" }
ql-hir = { path = "crates/ql-hir" }
ql-resolve = { path = "crates/ql-resolve" }
ql-typeck = { path = "crates/ql-typeck" }
