[workspace]
members = [
    "crates/ql-runtime",
    "crates/ql-span",
    "crates/ql-ast",
    "crates/ql-lexer",
    "crates/ql-parser",
    "crates/ql-fmt",
    "crates/ql-diagnostics",
    "crates/ql-analysis",
    "crates/ql-lsp",
    "crates/ql-hir",
    "crates/ql-mir",
    "crates/ql-borrowck",
    "crates/ql-resolve",
    "crates/ql-typeck",
    "crates/ql-driver",
    "crates/ql-codegen-llvm",
    "crates/ql-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["OpenAI Codex"]
license = "MIT"
repository = ""

[workspace.dependencies]
ql-runtime = { path = "crates/ql-runtime" }
ql-span = { path = "crates/ql-span" }
ql-ast = { path = "crates/ql-ast" }
ql-lexer = { path = "crates/ql-lexer" }
ql-parser = { path = "crates/ql-parser" }
ql-fmt = { path = "crates/ql-fmt" }
ql-diagnostics = { path = "crates/ql-diagnostics" }
ql-analysis = { path = "crates/ql-analysis" }
ql-lsp = { path = "crates/ql-lsp" }
ql-hir = { path = "crates/ql-hir" }
ql-mir = { path = "crates/ql-mir" }
ql-borrowck = { path = "crates/ql-borrowck" }
ql-resolve = { path = "crates/ql-resolve" }
ql-typeck = { path = "crates/ql-typeck" }
ql-driver = { path = "crates/ql-driver" }
ql-codegen-llvm = { path = "crates/ql-codegen-llvm" }
