[package]
name = "ql-analysis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ql-ast.workspace = true
ql-diagnostics.workspace = true
ql-hir.workspace = true
ql-parser.workspace = true
ql-resolve.workspace = true
ql-typeck.workspace = true
