[package]
name = "ql-analysis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ql-ast.workspace = true
ql-diagnostics.workspace = true
ql-hir.workspace = true
ql-borrowck.workspace = true
ql-lexer.workspace = true
ql-mir.workspace = true
ql-parser.workspace = true
ql-project.workspace = true
ql-resolve.workspace = true
ql-runtime.workspace = true
ql-span.workspace = true
ql-typeck.workspace = true
