[package]
name = "ql-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ql"
path = "src/main.rs"

[dependencies]
ql-analysis.workspace = true
ql-ast.workspace = true
ql-diagnostics.workspace = true
ql-driver.workspace = true
ql-fmt.workspace = true
ql-parser.workspace = true
ql-project.workspace = true
ql-runtime.workspace = true
ql-span.workspace = true
serde_json = "1"
toml = "1.1.2"
