[package]
name = "ql-driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ql-analysis.workspace = true
ql-ast.workspace = true
ql-codegen-llvm.workspace = true
ql-diagnostics.workspace = true
ql-hir.workspace = true
ql-resolve.workspace = true
ql-span.workspace = true
ql-typeck.workspace = true
