[package]
name = "ql-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "ql_lsp"
path = "src/lib.rs"

[[bin]]
name = "qlsp"
path = "src/main.rs"

[dependencies]
ql-ast.workspace = true
ql-analysis.workspace = true
ql-diagnostics.workspace = true
ql-fmt.workspace = true
ql-hir.workspace = true
ql-lexer.workspace = true
ql-project.workspace = true
ql-resolve.workspace = true
ql-span.workspace = true
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
tower-lsp = "0.20"

[dev-dependencies]
serde_json = "1"
tower = "0.4"
